Fixed-19814: Admin Forgot password captcha Icon misaligned.

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
@@ -254,6 +254,7 @@ label.mage-error {
         .captcha-reload {
             float: right;
             vertical-align: middle;
+            margin-top: 1.3rem;
         }
     }
 }
